apps/base/cncf-simple-flux-app/cncf-simple-flux-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cncf-simple-flux-deploy
  namespace: cncf-simple-flux-ns
  labels:
    app.kubernetes.io/name: cncf-simple-flux
    app.kubernetes.io/environment: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: cncf-simple-flux
      app.kubernetes.io/environment: development
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cncf-simple-flux
        app.kubernetes.io/environment: development
      annotations:
        app.cncf.io/sample-annotation: "annotation-for-cncf-simple-flux"
    spec:
      containers:
        # basic container details
        - name: cncf-simple-flux-container
          # never use reusable tags like latest or stable
          image: ghcr.io/w1593950/simple-go-app:1.0
          # hardcode the listening port if Dockerfile isn't set with EXPOSE
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe: # I always recommend using these, even if your app has no listening ports (this affects any rolling update)
            httpGet: # Lots of timeout values with defaults, be sure they are ideal for your workload
              path: /ready
              port: 8080
          livenessProbe: # only needed if your app tends to go unresponsive or you don't have a readinessProbe, but this is up for debate
            httpGet: # Lots of timeout values with defaults, be sure they are ideal for your workload
              path: /alive
              port: 8080
          resources: # Because if limits = requests then QoS is set to "Guaranteed"
            limits:
              memory: "100Mi" # If container uses over 500MB it is killed (OOM)
              cpu: 200m # Not normally needed, unless you need to protect other workloads or QoS must be "Guaranteed"
            requests:
              memory: "50Mi" # Scheduler finds a node where 500MB is available
              cpu: 100m # Scheduler finds a node where 1 vCPU is available

          # per-container security context
          # lock down privileges inside the container
          securityContext:
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false # prevent acting like host root

      # github secrets for github container registry
      imagePullSecrets:
        - name: ghcr

      terminationGracePeriodSeconds: 600 # default is 30, but you may need more time to gracefully shutdown (HTTP long polling, user uploads, etc)

      # per-pod security context
      # enable seccomp and force non-root user
      securityContext:
        seccompProfile:
          type: RuntimeDefault # enable seccomp and the runtimes default profile

        runAsUser: 1001 # hardcode user to non-root if not set in Dockerfile:0
        runAsGroup: 1001 # hardcode group to non-root if not set in Dockerfile
        runAsNonRoot: true # hardcode to non-root. Redundant to above if Dockerfile is set USER 1000
